修改结构
